# robot_cam_calibration_cpp

./: CMakeLists.txt  CMakeLists.txt~  READ_ME.txt  READ_ME.txt~  calibration&values.txt~  markerarray_log.txt  markerarray_log.txt~  package.xml  rgb_PS1080_PrimeSense_backup.yaml  tf_01032016.txt~  world-><-cam_tf_03032016.txt~
calibration_matrix/: calibration.txt  world_cam_matrix.txt
files/: logfile_calibration_05042016.txt  logfile_conversions.txt  logfile_pmatrixcalibration.txt  logfile_tagCalibration.txt  logfile_tagCalibration2.txt  logfile_tfCamWorld.txt~  results_27042016.txt  t_camToWorld.txt
include/cat_robotcam_calibration/: calculateExtrinsics.hpp
launch/: backFunction_calibration.launch  backFunction_calibration.launch~  calibration_14032016.txt~  robot_tf_publishing.txt~  run_calibration.launch~  run_calibration_new.launch  tags_tf_publishing.launch~
launch/txt backup folder/: backFunction_old.txt  calibration_14032016.txt
outdates_files/: CALIBRATION.TXT  calibration&values.txt
src/: backup_fixedTagCalibration.txt  backup_fixedTagCalibration.txt~  backup_transformConverter.txt  calculateExtrinsics.cpp  calibration.cpp  fixedTagCalibration.cpp  gettagpose_client.cpp  new_calibration.cpp  run_fixedCalibration.cpp  transformConverter.cpp
